tests/cases/compiler-development/artifact/errors/diagnostic-unknown-trait.ari
fn use_missing[T: MissingTrait](value: T) -> i64 {
  return 1;
}

fn main() -> i64 {
  return use_missing<i64>(1);
}
